Separate prod and dev server trusted oidc issuers